quiltcorgi/npm_out.log

> quiltcorgi@0.1.0 dev
> next dev

▲ Next.js 16.2.2 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.0.2:3000
- Environments: .env.local
✓ Ready in 540ms

○ Compiling / ...
 GET / 200 in 5.8s (next.js: 5.0s, application-code: 853ms)
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi12.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi13.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi18.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi26.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi23.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "http://localhost:3000/mascots&avatars/corgi29.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
[browser] Image with src "/logo.png" has either width or height modified, but not the other. If you use CSS to change the size of your image, also include the styles 'width: "auto"' or 'height: "auto"' to maintain the aspect ratio.
○ Compiling /api/community ...
 GET /api/auth/cognito/session 200 in 5.7s (next.js: 5.6s, application-code: 33ms)
[Community API Error] Error: Failed query: select "community_posts"."id", "community_posts"."title", "community_posts"."description", "community_posts"."thumbnailUrl", "community_posts"."likeCount", "community_posts"."commentCount", "community_posts"."category", "community_posts"."createdAt", "community_posts"."userId", "users"."name", "user_profiles"."username", "user_profiles"."avatarUrl", "users"."role", "community_posts"."projectId", "projects"."name", "projects"."thumbnailUrl" from "community_posts" left join "users" on "community_posts"."userId" = "users"."id" left join "user_profiles" on "community_posts"."userId" = "user_profiles"."userId" left join "projects" on "community_posts"."projectId" = "projects"."id" where "community_posts"."status" = $1 order by "community_posts"."createdAt" desc limit $2
params: approved,6
    at async GET (src/app/api/community/route.ts:66:36)
  64 |         : [desc(communityPosts.createdAt)];
  65 |
> 66 |     const [postRows, [totalRow]] = await Promise.all([
     |                                    ^
  67 |       db
  68 |         .select({
  69 |           id: communityPosts.id, {
  query: 'select "community_posts"."id", "community_posts"."title", "community_posts"."description", "community_posts"."thumbnailUrl", "community_posts"."likeCount", "community_posts"."commentCount", "community_posts"."category", "community_posts"."createdAt", "community_posts"."userId", "users"."name", "user_profiles"."username", "user_profiles"."avatarUrl", "users"."role", "community_posts"."projectId", "projects"."name", "projects"."thumbnailUrl" from "community_posts" left join "users" on "community_posts"."userId" = "users"."id" left join "user_profiles" on "community_posts"."userId" = "user_profiles"."userId" left join "projects" on "community_posts"."projectId" = "projects"."id" where "community_posts"."status" = $1 order by "community_posts"."createdAt" desc limit $2',
  params: [ 'approved', 6 ],
  [cause]: AggregateError:
      at async GET (src/app/api/community/route.ts:66:36)
    64 |         : [desc(communityPosts.createdAt)];
    65 |
  > 66 |     const [postRows, [totalRow]] = await Promise.all([
       |                                    ^
    67 |       db
    68 |         .select({
    69 |           id: communityPosts.id, {
    code: 'ECONNREFUSED',
    [errors]: [ [Error], [Error] ]
  }
}
 GET /auth/signin?callbackUrl=%2Fstudio%2Fnew 200 in 2.8s (next.js: 2.1s, proxy.ts: 13ms, application-code: 641ms)
 GET /api/auth/cognito/session 200 in 41ms (next.js: 16ms, application-code: 25ms)
